# proxima-cli

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/prox/: __init__.py  api.py  auth.py  cli.py  config.py
src/prox/commands/: agent.py  catalog.py  governance.py  knowledge.py  model.py  ontology.py  platform.py  routine.py  secret.py  skill.py  team.py  toolbox.py  workflow.py
