[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxima-cli"
version = "1.2.2"
description = "Proxima AIP CLI — manage your Proxima Intelligence platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Proxima Intelligence", email = "hello@proximaintel.com" },
]
keywords = ["ai", "agents", "platform", "cli", "proxima", "aip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
prox = "prox.cli:app"

[project.urls]
Homepage = "https://proximaintel.com/aip"
Documentation = "https://docs.proximaintel.com/cli"
Repository = "https://github.com/proximaintel/proxima-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/prox"]
